# cpp-simple-template

./: CMakeLists.txt  README.md
src/: main.cc
